--- a/templates/web_upload/web_upload.html
+++ b/templates/web_upload/web_upload.html
@@ -37,7 +37,7 @@
                        type: "post",
                        url : "/upload/file_exist/",
                        data: {
-                           filename: file.source['name']
+                           filename: file.source['name'],
                        },
                        cache: false,
                        timeout: 1000,
@@ -124,7 +124,7 @@
             $.post('/upload/success/', data, function (res) {
                 file_path = res;
                 alert(file_path);
-                location.href = '/upload/'
+                location.href = '/upload/';
             });          //ajax携带data向该url发请求
             $('.progress-bar').css('width', '100%');
             $('.progress-bar').text('上传完成');
