--- a/templates/websocket/index.html
+++ b/templates/websocket/index.html
@@ -21,10 +21,10 @@
             window.s.close();
         }
         if ("WebSocket" in window) {
-            alert("您的浏览器支持 WebSocket!");
+            console.log("websocket 已连接");
 
             // 打开一个 web socket
-            ws = new WebSocket("ws://127.0.0.1:8000/websock/test/");
+            ws = new WebSocket("ws://192.168.8.37:8006/websock/test/");
 
             ws.onopen = function () {
                 // Web Socket 已连接上，使用 send() 方法发送数据
